# bitstream

./: .travis.yml  Cargo.toml  README.md  index.html  search-index.js
bitstream/: index.html  sidebar-items.js
bitstream/reader/: enum.BigEndian.html  enum.Error.html  enum.LittleEndian.html  index.html  sidebar-items.js  struct.BitReader.html  trait.Endianess.html  type.Result.html
implementors/bitstream/reader/: trait.Endianess.js
implementors/core/convert/: trait.From.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/ops/: trait.Drop.js
implementors/std/error/: trait.Error.js
src/: lib.rs  reader.rs
src/bitstream/: lib.rs.html  reader.rs.html
